Actions
Bug #10805
closedFix for 10687 can be improved
Start date:
2019-04-15
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
needs-triage
Gerrit CR:
Description
rm pointed out a better way to define away the debug macros without needing to hamper smatch.
Updated by Electric Monk about 3 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit 679c9deae74d7b935e94eaaff2566ea45c1afe2b
commit 679c9deae74d7b935e94eaaff2566ea45c1afe2b Author: John Levon <john.levon@joyent.com> Date: 2019-04-25T15:39:27.000Z 10805 Fix for 10687 can be improved Reviewed by: Toomas Soome <tsoome@me.com> Reviewed by: Gergő Doma <domag02@gmail.com> Approved by: Gordon Ross <gwr@nexenta.com>
Actions