10805 Fix for 10687 can be improved Reviewed by: Toomas Soome <tsoome@me.com> Reviewed by: Gergő Doma <domag02@gmail.com> Approved by: Gordon Ross <gwr@nexenta.com>